--- a/template_src/www/index.html
+++ b/template_src/www/index.html
@@ -6,29 +6,14 @@
 	<meta name="viewport" content="width=device-width, initial-scale=1.0">
 	<title>Rule 34</title>
 	<link rel="icon" type="image/x-icon" href="img/favicon.ico">
+	<script type="text/javascript" src="cordova.js"></script>
+	<script type="text/javascript">
+		document.addEventListener('deviceready', function() {
+			window.location.href = 'https://rule34.xxx/';
+		}, false);
+	</script>
 </head>
 <body>
-	<iframe
-	src="https://rule34.xxx/"
-	style="
-	  position: fixed;
-	  top: 0px;
-	  bottom: 0px;
-	  right: 0px;
-	  width: 100%;
-	  border: none;
-	  margin: 0;
-	  padding: 0;
-	  overflow: hidden;
-	  z-index: 999999;
-	  height: 100%;
-	"
-	sandbox = "allow-forms allow-pointer-lock allow-same-origin allow-scripts allow-top-navigation"
-	
-	>
-  </iframe>
-  </body>
+	<p>Loading...</p>
+</body>
 </html>
-
-
-
